Thu, 19 Jun 2008 09:46:38 +0200 <thp@perli.net>
Fix alignment of "pill" pixbuf

	* src/gpodder/gui.py: Align the "pill" pixbuf all to the right

Thu, 19 Jun 2008 09:30:53 +0200 <thp@perli.net>
Use as much space as possible for podcast title and description

	* src/gpodder/gui.py: Hide the "pill" pixbuf cell when we don't have a
	value to display, so we can show more of the channel title +
	description
	* src/gpodder/libpodcasts.py: Add a new boolean value to tell the
	treeview column if we need to show the "pill" cell or not

Tue, 17 Jun 2008 19:41:33 -0400 <me@nikosapi.org>
Add 'Select All' and 'Select None' buttons to gPodderOpmlLister

	* data/gpodder.glade: add 'Select All' and 'Select None' buttons to 
	the the bottom-left of the gPodderOpmlLister window
	* src/gpodder/gui.py: add button signal handlers and a function
	( select_all(bool) ) to facilitate selecting all or no channels

Tue, 17 Jun 2008 14:49:12 +0200 <thp@perli.net>
Make handling pubDates a bit safer when reading it externally

	* src/gpodder/libpodcasts.py: Make handling of pubDates a bit more
	secure and easier
	* src/gpodder/gui.py: Add Daniel Ramos to list of donators and bug
	reporters

Sun, 15 Jun 2008 14:44:29 +0200 <thp@perli.net>
Merge "Allows user command execution after certain events" from Paul Rudkin

	* src/gpodder/config.py: Add two new configuration options:
	cmd_all_downloads_complete and cmd_download_complete
	* src/gpodder/download.py: Call the user-specific command when a
	download finishes (if configured)
	* src/gpodder/gui.py: If all downloads have been completed, execute
	the user-specific command (if configured)
	* src/gpodder/libgpodder.py: Add ext_command_thread function that
	handles calling an external command
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=4)

Sun, 15 Jun 2008 14:23:40 +0200 <thp@perli.net>
Support tooltips for the episode list; improve tooltip appearance

	* src/gpodder/gui.py: Add tooltips to treeAvailable (episode list);