@@ -1,3 +1,10 @@
+Thu, 19 Jun 2008 10:50:11 +0200 <thp@perli.net>
+Fix OPML dialog button sensitivity; sensitivity+totals for Episode Selector
+
+	* src/gpodder/gui.py: Fix the sensitivity setting of the OPML lister
+	when using the "Select All"/"Select None" buttons; add button
+	sensitivity setting code to Episode Selector and add episode count
+
 Thu, 19 Jun 2008 09:46:38 +0200 <thp@perli.net>
 Fix alignment of "pill" pixbuf
 
